--- a/composer.json
+++ b/composer.json
@@ -2,9 +2,13 @@
     "name": "laravel/laravel",
     "type": "project",
     "description": "The Laravel Framework.",
-    "keywords": ["framework", "laravel"],
+    "keywords": [
+        "framework",
+        "laravel"
+    ],
     "license": "MIT",
     "require": {
+        "ext-pdo_sqlite": "*",
         "php": "^8.0.2",
         "escolalms/headless-h5p": "^0.4.3",
         "guzzlehttp/guzzle": "^7.2",
