--- a/.env
+++ b/.env
@@ -8,12 +8,8 @@ LOG_CHANNEL=stack
 LOG_DEPRECATIONS_CHANNEL=null
 LOG_LEVEL=debug
 
-DB_CONNECTION=pgsql
-DB_HOST=pgsql
-DB_PORT=5432
-DB_DATABASE=laravel
-DB_USERNAME=sail
-DB_PASSWORD=password
+DB_CONNECTION=sqlite
+DB_FOREIGN_KEYS=true
 
 BROADCAST_DRIVER=log
 CACHE_DRIVER=file
