--- a/.env.heroku
+++ b/.env.heroku
@@ -2,7 +2,7 @@ APP_NAME=Laravel
 APP_ENV=local
 APP_KEY=base64:sFEvD5VSAO8WNyh8gZMNxM70t7BvPl/5YI4jaPTzqLY=
 APP_DEBUG=true
-APP_URL=http://localhost
+APP_URL=https://h5p-laravel-demo.herokuapp.com
 
 LOG_CHANNEL=stack
 LOG_DEPRECATIONS_CHANNEL=null
