--- a/.env.heroku
+++ b/.env.heroku
@@ -1,5 +1,5 @@
 APP_NAME=Laravel
-APP_ENV=local
+APP_ENV=production
 APP_KEY=base64:sFEvD5VSAO8WNyh8gZMNxM70t7BvPl/5YI4jaPTzqLY=
 APP_DEBUG=true
 APP_URL=https://h5p-laravel-demo.herokuapp.com
