--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -42,6 +42,13 @@ services:
             test: ["CMD", "pg_isready", "-q", "-d", "${DB_DATABASE}", "-U", "${DB_USERNAME}"]
             retries: 3
             timeout: 5s
+
+    adminer:
+        networks:
+        - sail
+        image: adminer
+        ports:
+        - 8078:8080
 networks:
     sail:
         driver: bridge
