--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -43,12 +43,13 @@ services:
             retries: 3
             timeout: 5s
 
-    adminer:
-        networks:
-        - sail
-        image: adminer
-        ports:
-        - 8078:8080
+    # adminer:
+    #     networks:
+    #     - sail
+    #     image: adminer
+    #     ports:
+    #     - 8078:8080
+
 networks:
     sail:
         driver: bridge
