--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -8,7 +8,7 @@ services:
             args:
                 WWWGROUP: '${WWWGROUP}'
         image: sail-8.1/app
-        extra_hosts:
+#        extra_hosts:
 #            - 'host.docker.internal:host-gateway'
         ports:
             - '${APP_PORT:-80}:80'
